Fix truncated breadcrumb

--- a/public/components/common/globalBreadcrumb/globalBreadcrumb.less
+++ b/public/components/common/globalBreadcrumb/globalBreadcrumb.less
@@ -4,8 +4,9 @@
     padding: 5px 0px 0px 5px;
 }
 
-.wz-global-breadcrumb-btn{
-    height: 20px;
+.euiBreadcrumbs--truncate .wz-global-breadcrumb .euiBreadcrumb:not(.euiBreadcrumb--collapsed){
+    max-width: initial!important;
+    overflow: initial!important;
 }
 
 @media only screen and (max-width: 767px){
